--- a/web/index.html
+++ b/web/index.html
@@ -54,5 +54,24 @@
       });
     });
   </script>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyAzdqKpTnj69M9u-eWDt1pzR7ajRfEgTYc",
+    authDomain: "divisibility-6ddd1.firebaseapp.com",
+    projectId: "divisibility-6ddd1",
+    storageBucket: "divisibility-6ddd1.appspot.com",
+    messagingSenderId: "784006547933",
+    appId: "1:784006547933:web:cb506feb81159869a70e34"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
